--- a/Web/Areas/Logistics/Views/Home/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Home/Index.cshtml
@@ -37,6 +37,9 @@
     td.number.ng-binding {
         text-align: center
     }
+    .align-center {
+        text-align: center;
+    }
 </style>
 
 
@@ -146,7 +149,7 @@
                         </div>
                     </div>
                     <div class="portlet-body">
-                        <div class="table-responsive" style="overflow-x: hidden;min-height: 250px;">
+                        <div class="table-responsive" style="overflow-x: hidden; min-height: 250px;">
                             <div class="row form-horizontal ">
                                 <div class="col-md-3 form-group">
                                     <label class="control-label col-md-6">Round</label>
@@ -179,7 +182,7 @@
                                 </div>
                             </div>
                             <span class="loading-spnr-da da-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>
-                            <div class="col-md-8">
+                            <div class="col-md-12">
                                 <table class="table table-striped table-checkable">
                                     <thead>
                                     <tr>
@@ -211,16 +214,93 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="col-md-4" style="min-height: 250px;">
+                            @*<div class="col-md-4" style="min-height: 250px;">
                                 <div class="portlet-content">
                                     <div id="containerPIE" class="chartWrap" draw-column-chart=""></div>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-md-12">* Only requisitions under the current HRD "{{HrdName}}" are listed here.</div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="box box-solid box-primary" ng-controller="BidPlanningIndicatorController">
+                <div class="portlet light bordered bg-inverse">
+                    <div class="portlet-title">
+                        <div class="caption font-green-sharp"><i class="fa fa-list font-green-sharp"></i> @Html.Translate("Bid Planning Data Entry Indicator")</div>
+                        <div class="tools">
+                            <a href="#" class="collapse" data-original-title="" title=""></a>
+                        </div>
+                        <div class="actions">
+                            <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-responsive" style="overflow-x: hidden; min-height: 250px;">
+                            <div class="row form-horizontal ">
+                                <div class="col-md-3 form-group">
+                                    <label class="control-label col-md-6">User</label>
+                                    <div class="col-md-5">
+                                        @*<select class="form-control" id="lgusers" ng-model="lguser" ng-options="u as u for u in lgusers"></select>*@
+                                        <select id="lgusers" ng-model="lguser" class="form-control">
+                                            <option ng-repeat="lguser in lgusers" value="{{lguser.UserProfileId}}">{{lguser.UserName}}</option>
+                                        </select>
+                                        <span class="loading-spnr-round user-filter-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 form-group">
+                                    <label class="control-label col-md-6">Start Date</label>
+                                    <div class="col-md-6">
+                                        <input id="startDateBidPlan" class="cats-datepicker2  form-control" type="text" placeholder="mm/dd/yyyy">
+                                    </div>
+                                </div>
+                                <div class="col-md-3 form-group">
+                                    <label class="control-label col-md-6">End Date</label>
+                                    <div class="col-md-6">
+                                        <input id="endDateBidPlan" class="cats-datepicker2 form-control" type="text" placeholder="mm/dd/yyyy">
+                                    </div>
+                                </div>
+                                <div class="col-md-3 form-group">
+                                    <div class="col-md-5">
+                                        <button type="button" class="btn green " ng-click="getBidPlanningIndicator()">Get</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <span class="loading-spnr-da bp-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class=""></span>
+                            <div class="col-md-12">
+                                <table class="table table-striped table-checkable">
+                                    <thead>
+                                    <tr>
+                                        <th class="hidden-xs align-center">Region</th>
+                                        <th class="number align-center">Number of Woredas</th>
+                                        <th class="number align-center">Hub Assigned Woredas</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr ng-repeat="region in BidPlanningIndicator">
+                                        <td class="align-center">{{region.Region}}</td>
+                                        <td class="number align-center">{{region.NumberOfWoredas|number}}</td>
+                                        <td class="number align-center">{{region.NumberOfHubAssignedWoredas|number}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-center">Total:</td>
+                                        <td class="number align-center">{{TotalNumberOfEstimatedRequisitions}}</td>
+                                        <td class="number align-center">{{TotalNumberOfApprovedRequisitions}}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            @*<div class="col-md-4" style="min-height: 250px;">
+                                <div class="portlet-content">
+                                    <div id="containerPIE" class="chartWrap" draw-column-chart=""></div>
+                                </div>
+                            </div>*@
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="ApprovedRequestContent">
                 <div ng-controller="ApprovedRequestsController">
                     <div class="portlet light bordered bg-inverse">
@@ -1351,7 +1431,7 @@
             $scope.startDate = "dd/m/yyyy";
             $scope.endDate = "dd/m/yyyy";
 
-            
+
             @*$http({ method: 'GET', url: '@Url.Action("GetRounds", "Home")' })
                 .success(function(data, status, headers, config) {
                     $scope.rounds = data;
@@ -1415,6 +1495,68 @@
             $scope.getDispatchAllocationIndicator();
         }
     ]);
+        myApp.controller('BidPlanningIndicatorController', [
+        '$scope', '$http', '$rootScope', function ($scope, $http, $rootScope) {
+
+            $scope.BidPlanningIndicator = [];
+            $scope.TotalNumberOfWoredas = 0;
+            $scope.TotalNumberOfHubAssignedWoredas = 0;
+
+            $scope.lguser = 0;
+            $scope.lgusers = [];
+            $scope.startDate = "dd/m/yyyy";
+            $scope.endDate = "dd/m/yyyy";
+
+
+            $http({
+                method: 'POST',
+                url: '@Url.Action("GetLogisticsUsers", "Home")',
+                //data: model,
+                beforeSend: function () {
+                    $(".user-filter-ldng").show();
+                    console.log("Before Send triggered");
+                },
+                complete: function () {
+                    $(".user-filter-ldng").hide();
+                    console.log("Complete triggered");
+                }
+            }).success(function (data, status, headers, config) {
+                $scope.lgusers = data;
+                //$scope.onGetRoundsSuccess(data[0]);
+
+            }).error(function (data, status, headers, config) { });;
+
+
+            $scope.getBidPlanningIndicator = function () {
+                console.log("startDate:" + $("#startDateBidPlan").val());
+                console.log("endDate:" + $("#endDateBidPlan").val());
+                $http({
+                    method: 'GET',
+                    params: { lguser: $("#lgusers").val(), startDate: $("#startDate").val(), endDate: $("#endDate").val() },
+                    url: '@Url.Action("BidPlanningIndicator", "Home", new { Area = "Logistics" })',
+                    beforeSend: function () {
+                        $(".bp-data-indicator-ldng").show();
+                        console.log("BidPlanningIndicator: Before Send triggered");
+                    },
+                    complete: function () {
+                        $(".bp-data-indicator-ldng").hide();
+                        console.log("BidPlanningIndicator: Complete triggered");
+                    }
+                })
+                    .success(function (data, status, headers, config) {
+                        $scope.BidPlanningIndicator = data;
+                        $scope.TotalNumberOfWoredas = 0;
+                        $scope.TotalNumberOfHubAssignedWoredas = 0;
+                        for (var i = 0; i < data.length; i++) {
+                            $scope.TotalNumberOfWoredas += data[i].TotalNumberOfWoredas;
+                            $scope.TotalNumberOfHubAssignedWoredas += data[i].TotalNumberOfHubAssignedWoredas;
+                        }
+                    });
+            };
+
+            $scope.getBidPlanningIndicator();
+        }
+        ]);
     })();
     function SummaryController($scope, $http) {
 
