--- a/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
+++ b/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
@@ -10,119 +10,143 @@
 
 
 
-    
+<div class="modal-dialog  ">
+    <div class="modal-content">
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">@Html.Translate("Add New Receive Plan")</h3>
-    </div>
-    @{
-        var siNo = "0";
-        if (Model != null)
-        {
-            siNo = Model.SINumber;
+
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">@Html.Translate("Add New Receive Plan")</h3>
+        </div>
+        @{
+            var siNo = "0";
+            if (Model != null)
+            {
+                siNo = Model.SINumber;
+            }
         }
-    }
 
-    @using (Html.BeginForm("Save", "Donation", new { siNumber = siNo }, FormMethod.Post, new { @class = "modal-form", id = "myModal" }))
-    {
-    
+        @using (Html.BeginForm("Save", "Donation", new { siNumber = siNo }, FormMethod.Post, new { @class = "modal-form", id = "myModal" }))
+        {
 
-        
-        <table border="0" class="form-horizontal">
-            <tr style="width: 300px">
-            <td style="width:50%">
-                <div class="control-label">
-                    @Html.Label(@Html.Translate("SI Number"))
-                </div>
-                <div class="controls">
-                    @Html.TextBoxFor(model => model.SINumber, new { @class = "addresspicker", required = "required", autocomplete = "off" })<span class="hide help-inline">Required!</span>
-                    @Html.ValidationMessageFor(m => m.SINumber)
-               
-                </div>
 
-            </td>
-            
-                
-           <td style="width: 50%">
-                 <div class="control-label">
-                     @Html.Label(@Html.Translate("Quantity"))
-                 </div>
-                 <div class="controls" >
-                     @Html.TextBoxFor(model => model.WieghtInMT, new { @readonly = "readonly", Value = "" })<span class="hide help-inline">Required!</span>
-                     @Html.ValidationMessageFor(m => m.WieghtInMT)
-               
-                 </div>
 
-             </td>
-             <tr style="width: 300px">   
-                <td style="width: 50%">
-                    <div class="control-label">
-                        @Html.LabelFor(model => model.ETA, @Html.Translate("ETA"))
-                    </div>
-                    <div class="controls" >
-                        @(Html.TextBoxFor(model => model.ETA, new { @readonly = "readonly", Value = "" }))
-                        @Html.ValidationMessageFor(model => model.ETA)
-                    </div>
-                </td>
+            <table border="0" class="form-horizontal ">
+                <tr style="width: 300px">
+                    <td style="width:50%; padding-bottom: 10px; padding-top:10px;">
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("SI Number"))
+                        </div>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.SINumber, new { @class = "addresspicker", required = "required", autocomplete = "off" })<span class="hide help-inline">Required!</span>
+                            @Html.ValidationMessageFor(m => m.SINumber)
 
-                   
-                <td>
-                    <div class="control-label">
-                        @Html.Label(@Html.Translate("Donor")) 
-                    </div>
-                    <div class="controls">
-                        @(Html.TextBoxFor(model => model.DonorName, new { @readonly = "readonly" })) @*new SelectList(Model.Donors, "DonorID", "Name")*@
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                
-                    <div class="control-label">
-                        @Html.Label(@Html.Translate("Commodity Type")) 
-                    </div>
-                    <div class="controls" >
-                        @(Html.TextBoxFor(model => model.CommomdityTypeName, new { @readonly = "readonly" })) @*, new SelectList(Model.CommodityTypes, "CommodityTypeID", "Name")*@
-                    </div>
-               
-                </td>
-                <td>
-                
-                    <div class="control-label">
-                        @Html.Label(@Html.Translate("Commodity")) 
-                    </div>
-                    <div class="controls" >
-                        @(Html.TextBoxFor(model => model.CommodityName, new { @readonly = "readonly" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
-                    </div>
-                
-            
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="control-label">
-                        @Html.Label(@Html.Translate("Program")) 
-                    </div>
-                    <div class="controls">
-                        @(Html.TextBoxFor(model => model.ProgramName, new { @readonly = "readonly" })) @*, new SelectList(Model.Programs, "ProgramID", "Name")*@
-                    </div>
-                </td>
-            </tr>
-                
+                        </div>
 
-           
-            <tr>
-                <td colspan="2">
-                    <div class="modal-footer"> <button class="btn btn-primary" type="button" onclick="onSave(this)">@Html.Translate("Save")</button>
-                        <button class="btn" data-dismiss="modal" aria-hidden="true">@Html.Translate("Cancel")</button>
-                    </div>
-                </td>
-            </tr>  
-        </table>
-       
+                    </td>
 
-    }
+
+                    <td style="width:50%; padding-bottom: 10px;padding-top:10px;">
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Quantity"))
+                        </div>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.WieghtInMT, new { @readonly = "readonly", Value = "" })<span class="hide help-inline">Required!</span>
+                            @Html.ValidationMessageFor(m => m.WieghtInMT)
+
+                        </div>
+
+                    </td>
+                <tr style="width: 300px">
+                    <td style="width:50%; padding-bottom: 10px;">
+                        <div class="control-label">
+                            @Html.LabelFor(model => model.ETA, @Html.Translate("ETA"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.ETA, new { @readonly = "readonly", Value = "" }))
+                            @Html.ValidationMessageFor(model => model.ETA)
+                        </div>
+                    </td>
+
+
+                    <td style="width:50%; padding-bottom: 10px;">
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Donor"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.DonorName, new { @readonly = "readonly" })) @*new SelectList(Model.Donors, "DonorID", "Name")*@
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width:50%; padding-bottom: 10px;">
+
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Commodity Type"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.CommomdityTypeName, new { @readonly = "readonly" })) @*, new SelectList(Model.CommodityTypes, "CommodityTypeID", "Name")*@
+                        </div>
+
+                    </td>
+
+                    <td style="width:50%; padding-bottom: 10px;">
+
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Commodity"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.CommodityName, new { @readonly = "readonly" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
+                        </div>
+
+
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width:50%; padding-bottom: 10px;">
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Program"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.ProgramName, new { @readonly = "readonly" })) @*, new SelectList(Model.Programs, "ProgramID", "Name")*@
+                        </div>
+                    </td>
+
+                    <td style="width:50%; padding-bottom: 10px;">
+
+                        <div class="control-label">
+                            @Html.Label(@Html.Translate("Parent Commodity"))
+                        </div>
+                        <div class="controls">
+                            @(Html.TextBoxFor(model => model.ParentCommodityName, new { @readonly = "readonly" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
+                        </div>
+
+
+                    </td>
+                </tr>
+
+
+
+
+            </table>
+
+
+        }
+
+
+
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" onclick="onSave(this)">@Html.Translate("Save")</button>
+            <button class="btn" data-dismiss="modal" aria-hidden="true">@Html.Translate("Cancel")</button>
+        </div>
+
+
+
+    </div>
+</div>
+
+
+
 
 <script>
     var giftCertificates = "";
@@ -138,7 +162,7 @@
             success: function (result) {
                 for (var i = 0; i < result.length; i++) {
                     sourceArr.push(result[i]);
-               
+
                 }
             },
             error: function (error) {
@@ -147,15 +171,15 @@
         });
     });
 
-    
+
 
     $('#SINumber').typeahead({ source: sourceArr });
-    
-    
 
-    
+
+
+
     function onSave(e) {
-        
+
         if ($('#SINumber').val() === "") {
             // invalid
             $('#SINumber').next('.help-inline').show();
@@ -164,20 +188,20 @@
             $('#WieghtInMT').next('.help-inline').show();
             return false;
         }
-        
+
         else {
             window.location = null;
             window.location = "@Url.Action("SaveHeader", "Donation")" + "?id=" + $("#SINumber").val();
-         
+
         }
-        
-      
-       
-       
+
+
+
+
     };
 
     $("#SINumber").on('change', function () {
-        
+
         $.ajax({
             type: "POST",
             url: "@Url.Action("Load", "Donation",new {Area="Logistics"})" + "?id=" + $("#SINumber").val(),
@@ -188,32 +212,33 @@
 
                 var date = new Date(parseInt(result.eta.substr(6)));
                 var dtString = (date.getMonth() + 2) + "/" + ((date.getDate()) + 8) + "/" + date.getFullYear();
-                
+
                 $("#WieghtInMT").val(result.quantity);
                 $("#ETA").val(dtString);
                 $("#DonorName").val(result.donorId);
                 $("#ProgramName").val(result.programId);
                 $("#CommodityName").val(result.comodity);
+                $("#ParentCommodityName").val(result.parentCommodityType);
                 $("#CommomdityTypeName").val(result.commodityType);
-               
-               
+
+
             },
             error: function (error) {
-                
+
                 //alert("Duplicate gift certificate has been found: " + error.responseText);
                 $("#WieghtInMT").val("");
                 $("#ETA").val("");
                 $("#DonorName").val("");
+                $("#ParentCommodityName").val("");
                 $("#ProgramName").val("");
                 $("#CommodityName").val("");
                 $("#CommomdityTypeName").val("");
             }
         });
     });
-    
 
-    
+
+
 </script>
-
 
 
