HTFX-1161 - CATS-1161 - Filter form was not submitting and receive detail was not laoding - both are fixed

--- a/Web/Areas/Hub/Views/Receive/Index.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Index.cshtml
@@ -273,11 +273,12 @@
     function getFilterAttributes() {
         var closed = "false";
         var receivable = "false";
-        if (document.getElementById("chk_closed").checked) {
+        console.log("chk_closed: " + $("#chk_closed").val());
+        if ($("#chk_closed").val() === "on") {
             closed = "true";
         }
         
-        if (document.getElementById("chk_receivable").checked)
+        if ($("#chk_receivable").val() === "on")
         {
             receivable = "true";
         }
