--- a/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
@@ -37,9 +37,11 @@
         columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
         columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
         columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
-       
-        columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
-        columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+
+        //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
+        columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new {align = "right"});
+        //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+        columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new {align = "right"});
         columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
     "# if (RemainingBalanceInMT < 0) { #" +
         "#: RemainingBalanceInMT * -1 #"   + "  <span style='font-weight: bold;'>  (over received) </span>" +
@@ -87,10 +89,12 @@
                         {
                             columns.Bound(com => com.CommodityName).Title(Html.Translate("Commodity"));
                             columns.Bound(com => com.UnitName).Title(Html.Translate("Unit"));
-                            columns.Bound(com => com.SentQuantityInUnit).Title(Html.Translate("Sent Qty (Unit)")).HtmlAttributes(new { align = "right" }); ;
-                            columns.Bound(com => com.ReceivedQuantityInUnit).Title("Received Qty (Unit)").HtmlAttributes(new { align = "right"}); ;
-                            columns.Bound(com => com.SentQuantityInMT).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(SentQuantityInMT)#");
-                            columns.Bound(com => com.ReceivedQuantityInMT).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+                            columns.Bound(com => com.SentQuantityInUnitFormatted).Title(Html.Translate("Sent Qty (Unit)")).HtmlAttributes(new { align = "right" });
+                            columns.Bound(com => com.ReceivedQuantityInUnitFormatted).Title("Received Qty (Unit)").HtmlAttributes(new { align = "right"});
+                            //columns.Bound(com => com.SentQuantityInMT).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(SentQuantityInMT)#");
+                            columns.Bound(com => com.SentQuantityInMTFormatted).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new {align = "right", @class = "cats_amt_in_uom"});
+                            //columns.Bound(com => com.ReceivedQuantityInMT).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+                            columns.Bound(com => com.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new {align = "right", @class = "cats_amt_in_uom"});
 
                         })
                         .DataSource(dataSource => dataSource
